--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "7.1.3",
     "@totvs/thf-ui": "3.1.0",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
+    "path": "^0.12.7",
     "rxjs": "6.3.3",
     "zone.js": "~0.8.26"
   },
